# see https://github.com/karlicoss/pymplate for up-to-date reference
[project]
dynamic = ["version"]  # version is managed by build backend
name = "axol"
dependencies = [
    "click",
    "loguru",
    "orjson",
    "sqlalchemy",
    "more-itertools",
    "typing-extensions",
    "tabulate",  # for configs listing

    "python-dateutil; python_version < '3.11'", 
]
requires-python = ">=3.10"

## these need to be set if you're planning to upload to pypi
description = "Your personal search alerts"
license = {file = "LICENSE"}
authors = [
    {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
]
maintainers = [
    {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
]
[project.urls]
Homepage = "https://github.com/karlicoss/axol"
##


[project.optional-dependencies]
optional = [
    "PyGithub",        # modules.github.search
    "python-hn",       # modules.hackernews.search
    "praw",            # modules.reddit.search
    "beautifulsoup4",  # modules.lobsters.search
    "html2text"     ,  # for rendering (e.g. to markdown)
]

[dependency-groups]
testing = [
    "pytest",
    "ruff",
    "mypy",
    "lxml",  # for mypy html coverage

    "types-requests",
    "types-tabulate",
]


# workaround for error during uv publishing
# see https://github.com/astral-sh/uv/issues/9513#issuecomment-2519527822
[tool.setuptools]
license-files = []


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# unfortunately have to duplicate project name here atm, see https://github.com/pypa/hatch/issues/1894
[tool.hatch.build.targets.wheel]
packages = ["src/axol"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "python-simplified-semver"
local_scheme = "dirty-tag"
