# see https://github.com/karlicoss/pymplate for up-to-date reference
[project]
dynamic = ["version"]  # version is managed by build backend
name = "axol"
dependencies = [
    "click",
    "loguru",
    "orjson",
    "sqlalchemy",
    "more-itertools",
    "tabulate",  # for configs listing
]
requires-python = ">=3.12"

## these are only useful for pypi
description = "Your personal search alerts"
license     = {file = "LICENSE"}
authors     = [{name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"}]
maintainers = [{name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"}]

[project.urls]  # pypi will fetch some github stats/link, so somewhat useful
Homepage = "https://github.com/karlicoss/axol"
##


[project.optional-dependencies]
optional = [
    "PyGithub",        # modules.github.search
    "python-hn",       # modules.hackernews.search
    "praw",            # modules.reddit.search
    "beautifulsoup4",  # modules.lobsters.search
    "html2text"     ,  # for rendering (e.g. to markdown)
]

[dependency-groups]
testing = [
    "pytest>=9",  # need version 9 for proper namespace package support
    "ruff",

    "axol[optional]",
]
typecheck = [
    "mypy",
    "lxml", # for mypy html coverage
    "ty>=0.0.26",

    "types-requests",
    "types-tabulate",

    { include-group = "testing" },
]


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# unfortunately have to duplicate project name here atm, see https://github.com/pypa/hatch/issues/1894
[tool.hatch.build.targets.wheel]
packages = ["src/axol"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "python-simplified-semver"
local_scheme = "dirty-tag"

